css for button that was overwritten

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ body {
     list-style: none;
 }
 
-.btn:focus {
+.btn:hover, .btn:focus, .btn.focus {
     color: black;
+    text-decoration: none;
 }
